# tangram-py

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.sh  example.py  scene.yaml  setup.py  tangram.py
examples/: demo.py  gps.py  marks-demo.py
scripts/: make.sh
scripts/src/: context.cpp  context.h  main.cpp
src/: context.cpp  main.cpp  platform_posix.cpp  platform_posix.h
tangram/: CMakeLists.txt  __init__.py  build.sh  configure  example.py  tangram.i  tangram.py
tangram/src/: context.cpp  context.h  example.py  platform_posix.cpp  tangram-proxy.cpp  tangram-proxy.h  tangram.cpp  tangram.i  tangram_wrap.cpp
